Small Caps cleanup

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -105,12 +105,12 @@
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
-<p class="itemText">PREFACE TO THE 1932 EDITION</span></p></p>
+<p class="itemText">Preface to the 1932 edition</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">WHEN the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was ...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1922 edition</p>
-<p class="itemText">PREFACE TO THE 1922 EDITION</span></p></p>
+<p class="itemText">Preface to the 1922 edition</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">This volume contains a complete English translation of the famous Ethiopian work, The “KEBRA NAGAST,” i.e. the “Glory of the Kings [of Ethiopia].” This work has been held in peculiar honour in Abyssinia for several centuries, and throughout that country it has been, and still is, venerated by the people as containing the final proof of their descent from the Hebrew Patriarchs, and of the kinship of their kings of the Solomonic line with Christ, the Son of God. The imp...</p>
 </li>
 </ul>
