Updating Scrivener style info

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>ModernKebraNegast</title>
+<title>Kebra Negast: The Queen of Sheba & her only son Menyelek</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!-- NOTE: margin property = top-right-bottom-left -->
@@ -89,11 +89,8 @@
 <ul>
 <li>
 <p class="topLevelItemTitle">Title</p>
-</li>
-<li>
-<p class="topLevelItemTitle">Plate</p>
-<p class="itemText">The Glory Of Kings</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Paraclete, Who goeth forth from the Father, and deriveth from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
+<p class="itemText">The Queen of Sheba &amp; her only son Menyelek</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Being the history of the departure of God &amp; his Ark of the Covenant from Jerusalem to Ethiopia, and the establishment of the religion of the Hebrews &amp; the Solomonic line of kings in that country. A complete translation of the Kebra Nagast with introduction by Sir E. A. Wallis Budge, M.A., Litt.D., D.Litt., Lit.D., F.S.A., Sometime Scholar of Christ’s College, Cambridge, and Tyrwhitt Hebrew Scholar. Keeper of the Department of Egyptian and Assyrian Antiq...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Prefaces</p>
@@ -150,6 +147,11 @@
 </ul>
 <hr class="afterText"/>
 
+<li>
+<p class="topLevelItemTitle">Plate</p>
+<p class="itemText">The Glory Of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Paraclete, Who goeth forth from the Father, and deriveth from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
+</li>
 <li>
 <p class="topLevelItemTitle">1</p>
 <p class="itemText">Concerning the Glory of Kings</span></p></p>
