Naming the Intro and Preface texts, and emphasizing instead of italicizing

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -102,13 +102,11 @@
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
-<p class="itemText">Preface to the 1932 edition</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">WHEN the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was ...</p>
+<p class="itemText">WHEN the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was frankly admitted by all the ...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1922 edition</p>
-<p class="itemText">Preface to the 1922 edition</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">This volume contains a complete English translation of the famous Ethiopian work, The “KEBRA NAGAST,” i.e. the “Glory of the Kings [of Ethiopia].” This work has been held in peculiar honour in Abyssinia for several centuries, and throughout that country it has been, and still is, venerated by the people as containing the final proof of their descent from the Hebrew Patriarchs, and of the kinship of their kings of the Solomonic line with Christ, the Son of God. The imp...</p>
+<p class="itemText">This volume contains a complete English translation of the famous Ethiopian work, The “Kebra Nagast,” i.e. the “Glory of the Kings [of Ethiopia].” This work has been held in peculiar honour in Abyssinia for several centuries, and throughout that country it has been, and still is, venerated by the people as containing the final proof of their descent from the Hebrew Patriarchs, and of the kinship of their kings of the Solomonic line with Christ, the Son of God. The importance of the book, both fo...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -119,30 +117,26 @@
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">1</p>
-<p class="itemText">The Manuscripts of the Kebra Nagast and their arrival in Europe. The labours of Bruce, Dillmann, Praetorius, Wright, Zotenberg, and Bezold. King John’s letter to Lord Granville. Date of compilation of the Kebra Nagast. The Ethiopian work based on Coptic and Arabic sources, etc.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The KEBRA NAGAST, or the Book of the Glory of the Kings [of Ethiopia], has been held in the highest esteem and honour throughout the length and breadth of Abyssinia for a thousand years at least, and even to-day it is bel...</p>
+<p class="itemTitle">The Manuscripts of the Kebra Nagast and their arrival in Europe. The labours of Bruce, Dillmann, Praetorius, Wright, Zotenberg, and Bezold. King John’s letter to Lord Granville. Date of compilation of the Kebra Nagast. The Ethiopian work based on Coptic and Arabic sources, etc.</p>
+<p class="itemText">The Kebra Nagast, or the Book of the Glory of the Kings [of Ethiopia], has been held in the highest esteem and honour throughout the length and breadth of Abyssinia for a thousand years at least, and even to-day it is believed by every educated man in that country to contain the true history of the origin of the Solomonic line of kings in Ethiopia, and is regarded as the final authority on the history of the conversion of the Ethiopians from the worship of the sun, moon, and stars to that of the...</p>
 </li>
 <li>
-<p class="itemTitle">2</p>
-<p class="itemText">English translation of the Arabic text describing how the Kingdom of David was transferred from Jerusalem to Ethiopia.</span></p></p>
+<p class="itemTitle">English translation of the Arabic text describing how the Kingdom of David was transferred from Jerusalem to Ethiopia.</p>
+<p class="itemText">.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">[Here is] the explanation of the reason for the transfer of the kingdom of David from his son Solomon, King of Israel, to the country of the Negus, that is to say, to Abyssinia.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solo...</p>
+<p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solomon, in accordance with his most excellent desire, began to build the House of the Lord, praise be unto Him! Solomon ...</p>
 </li>
 <li>
-<p class="itemTitle">3</p>
-<p class="itemText">Legends of Solomon and the Queen of Sheba in the Kur’ân and in Muhammadan literature</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The author, or editor, of the Kur’ân devoted a considerable section of Surah XXVII to the correspondence that passed between the Queen of Sheba and King Solomon, and to their interviews. Among the many gifts that God bestowed upon Solomon were the understanding of the speech of birds, and knowledge of every kind. He was the lord of men, genii and birds. When he travelled through the air on his magical carpet of ...</p>
+<p class="itemTitle">Legends of Solomon and the Queen of Sheba in the Kur’ân and in Muhammadan literature</p>
+<p class="itemText">The author, or editor, of the Kur’ân devoted a considerable section of Surah XXVII to the correspondence that passed between the Queen of Sheba and King Solomon, and to their interviews. Among the many gifts that God bestowed upon Solomon were the understanding of the speech of birds, and knowledge of every kind. He was the lord of men, genii and birds. When he travelled through the air on his magical carpet of green silk, which was borne aloft by the wind according to the King’s direction, the ...</p>
 </li>
 <li>
-<p class="itemTitle">4</p>
-<p class="itemText">Modern Legends of Solomon and the Queen of Sheba</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A curious and interesting legend of the way in which King Solomon became the father of Menyelek is found in a number of slightly varying versions among many of the tribes of Northern Abyssinia. According to this the mother of Menyelek was a Tigrê girl called Ĕtĕyê Azêb (i.e. Queen of the South), and her people worshipped a dragon or serpent, to which each man in turn had to present as an offering his eldest daughter, and large quantities of sweet ...</p>
+<p class="itemTitle">Modern Legends of Solomon and the Queen of Sheba</p>
+<p class="itemText">A curious and interesting legend of the way in which King Solomon became the father of Menyelek is found in a number of slightly varying versions among many of the tribes of Northern Abyssinia. According to this the mother of Menyelek was a Tigrê girl called Ĕtĕyê Azêb (i.e. Queen of the South), and her people worshipped a dragon or serpent, to which each man in turn had to present as an offering his eldest daughter, and large quantities of sweet beer and milk. When the turn of her parents came ...</p>
 </li>
 <li>
-<p class="itemTitle">5</p>
-<p class="itemText">The Contents of the Kebra Nagast described</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The book opens with an interpretation and explanation of the Three Hundred and Eighteen Orthodox Fathers concerning the children of Adam, and the statement that the Trinity lived in Zion, the Tabernacle of the Law of God, which God made in the fortress of His holiness before He made anything else. The Trinity agreed to make man in God’s image, and the Son agreed to put on the flesh of Adam; man was made to take the place of Satan and to praise God. In d...</p>
+<p class="itemTitle">The Contents of the Kebra Nagast described</p>
+<p class="itemText">The book opens with an interpretation and explanation of the Three Hundred and Eighteen Orthodox Fathers concerning the children of Adam, and the statement that the Trinity lived in Zion, the Tabernacle of the Law of God, which God made in the fortress of His holiness before He made anything else. The Trinity agreed to make man in God’s image, and the Son agreed to put on the flesh of Adam; man was made to take the place of Satan and to praise God. In due course Christ, the second Adam, was born...</p>
 </li>
 </ul>
 <hr class="afterText"/>
