Update Metadata file

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -648,25 +648,71 @@
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">Appendix I</p>
+<p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
+<p class="itemText">????</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Original authorship (believed to be) in Coptic</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">12XX</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Oldest believed codex of the Kebra Nagast penned.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1314-1344</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Abu l-’Izz and ’Abu ‘l-Faraj translate the Coptic manuscript into Arabic</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1321</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“Isaac” translates the Arabic copy into Ge’ez (later becoming Bezold’s source for his German translation in 1905)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1527</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The [Jesuit] missionary Francisco Alvarez returns to Portugal after 7 years in Ethiopia, and begins publishing stories in 1533, 1557, 1561, and 1588 of some of the stories within the KN ...</p>
 </li>
 <li>
-<p class="itemTitle">Appendix II</p>
+<p class="itemTitle">Recommended reading</p>
+<p class="itemText">Alternate versions</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Commentary</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Related reading</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span></p>
 </li>
 <li>
-<p class="itemTitle">Appendix III</p>
+<p class="itemTitle">Visual timeline</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">TK</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Bayna Lehkem (“son of the Wise Man”) better known as Menelik, born at Bala Zadisareya.<span class="Apple-converted-space">  </span>queen bore the child in her mother's country as she was journeying back to her own country. Legend places the location at the Mai Bela stream near Tsa'edakristyan (“White Christian”) 12 km outside Asmara in Eritrea<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1800 - 1400BCE Abraham’s life</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1400-1200 BCE Moses’ life</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">ca. 1400 BC captivity in Egypt</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1200-1050 BCE Israelite rule by judges</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">ca. 1000-950 BCE David’s reign</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">ca. 950-925 BCE Solomon’s r...</p>
 </li>
 <li>
-<p class="itemTitle">Appendix IV</p>
+<p class="itemTitle">Family tree</p>
+<p class="itemText">[ Want to visualize the forks of the tree descending from Adam according the “pearl” lineage described in this text]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Adam</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Noah</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">David</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Solomon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Menelik<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">…</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Jesus</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">…</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Haile Selassie</p>
 </li>
 <li>
-<p class="itemTitle">Appendix V</p>
+<p class="itemTitle">Organization models</p>
+<p class="itemText">While this book keeps the same chapter ordering that Sir E. A. Wallis Budge used in his original translation, there is some modern debate as to the original ordering of the chapters within this book based on different authors, time periods, and contexts. Some scholars have proposed alternate arrangements that order the texts in thematic structure.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">David Hubbard, 1956</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1. Sheba-Menelik cycle: chapters 1-63, 84-94, 113-117</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">2. Solomon &amp; Semitic ancestry of kings: chapters 64-83</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">3. Christian prophe...</p>
 </li>
 <li>
-<p class="itemTitle">Appendix VI</p>
-</li>
-<li>
-<p class="itemTitle">Appendix VII</p>
+<p class="itemTitle">Map</p>
+<p class="itemText">[ Map to come of Ethiopia, Israel, Aksumite empire, and kingdoms ]</p>
 </li>
 </ul>
 </ul>
