--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Kebra Negast: The Queen of Sheba & her only son Menyelek</title>
+<title>ModernKebraNegast</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!-- NOTE: margin property = top-right-bottom-left -->
