--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -143,7 +143,7 @@
 
 <li>
 <p class="topLevelItemTitle">Plate</p>
-<p class="itemText">The Glory Of Kings</span></p></p>
+<p class="itemText">The Glory of Kings</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Paraclete, Who goeth forth from the Father, and deriveth from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
 </li>
 <li>
