Completed applying Emphases throughout entire text, and added Sacred-Texts changelog for  1922 version

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -639,8 +639,7 @@
 
 <li>
 <p class="topLevelItemTitle">Colophon</p>
-<p class="itemText">Colophon</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">In the Arabic text it is said: “We have turned [this book] into Arabic from a Coptic manuscript [belonging to] the throne of Mark the Evangelist, the teacher, the Father of us all. We have translated it in the four hundred and ninth year of mercy in the country of Ethiopia, in the days of Gabra Masḳal the king, who is called Lâlîbalâ, in the days of Abbâ George, the good bishop. And God neglected to have it translated and interpreted into the speech of Abyssinia. And when I had pondered...</p>
+<p class="itemText">In the Arabic text it is said: “We have turned [this book] into Arabic from a Coptic manuscript [belonging to] the throne of Mark the Evangelist, the teacher, the Father of us all. We have translated it in the four hundred and ninth year of mercy in the country of Ethiopia, in the days of Gabra Masḳal the king, who is called Lâlîbalâ, in the days of Abbâ George, the good bishop. And God neglected to have it translated and interpreted into the speech of Abyssinia. And when I had pondered this—Why...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Appendices</p>
