Added source content for A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast (and error changelog for S-T.c)

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -102,7 +102,7 @@
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
-<p class="itemText">WHEN the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was frankly admitted by all the ...</p>
+<p class="itemText">When the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was frankly admitted by all the ...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1922 edition</p>
@@ -646,6 +646,11 @@
 </li>
 <hr class="afterTitle"/>
 <ul>
+<li>
+<p class="itemTitle">A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast</p>
+<p class="itemText">Genesis i, 1, 170, 191; i, 26, 1; ii, 17, 185; iii, 16, 48; v, 9, 9; vi, 2–4, 188; vi, 14, 188; viii, 21, 7; ix, 4, 6; ix, 25–27, 6; x, 6, 8; xii ff., 11, 144; xiii, 14–17, 11; xiv, —, 200; xv, 1, 10; xviii, 1, 196; xxii, 13, 113, 196; xxii, 17, 30; xxx, 37, 196; xxxv, 22, 12; xlvii, 29, 221; xlvii, 31, 196; xlix, 4, 12; xlix, 8–12, 210; l, 25, 221.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Exodus iii, 2, 174; vii, 10, 180; vii, 19, 181; viii, —, 181; x, 21, 22, 180; xv, 25, 182; xvi, 35, 178; xvii, 4, 176; xvii, 6, 179; xvii, 11, 12, 1...</p>
+</li>
 <li>
 <p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
 <p class="itemText">????</span></p></p>
