Removed 1932 footnotes from 1922 version

--- a/KebraNagast1932.scriv/QuickLook/Preview.html
+++ b/KebraNagast1932.scriv/QuickLook/Preview.html
@@ -108,7 +108,7 @@
 <ul>
 <li>
 <p class="itemTitle">Preface to the Present Edition</p>
-<p class="itemText">WHEN the English translation of the "Book of the Glory of Kings" appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was frankly admitted by all the ...</p>
+<p class="itemText">When the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was frankly admitted by all the ...</p>
 </li>
 </ul>
 <hr class="afterText"/>
