--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -648,8 +648,7 @@
 <ul>
 <li>
 <p class="itemTitle">A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast</p>
-<p class="itemText">Genesis i, 1, 170, 191; i, 26, 1; ii, 17, 185; iii, 16, 48; v, 9, 9; vi, 2–4, 188; vi, 14, 188; viii, 21, 7; ix, 4, 6; ix, 25–27, 6; x, 6, 8; xii ff., 11, 144; xiii, 14–17, 11; xiv, —, 200; xv, 1, 10; xviii, 1, 196; xxii, 13, 113, 196; xxii, 17, 30; xxx, 37, 196; xxxv, 22, 12; xlvii, 29, 221; xlvii, 31, 196; xlix, 4, 12; xlix, 8–12, 210; l, 25, 221.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Exodus iii, 2, 174; vii, 10, 180; vii, 19, 181; viii, —, 181; x, 21, 22, 180; xv, 25, 182; xvi, 35, 178; xvii, 4, 176; xvii, 6, 179; xvii, 11, 12, 1...</p>
+<p class="itemText">Genesis i, 1, 170, Concerning the Beginning; i, 26, 1; ii, 17, Concerning the Angels who rebelled; iii, 16, 48; v, 9, 9; vi, 2–4, Concerning the Angels who rebelled; vi, 14, Concerning the Angels who rebelled; viii, 21, 7; ix, 4, 6; ix, 25–27, 6; x, 6, 8; xii ff., 11, 144; xiii, 14–17, 11; xiv, —, 200; xv, 1, 10; xviii, 1, More concerning the Ark and the Talk of the Wicked; xxii, 13, 113, More concerning the Ark and the Talk of the Wicked; xxii, 17, 30; xxx, 37, More concerning the Ark and the T...</p>
 </li>
 <li>
 <p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
