Added TOC to Scrivener and Markdown output

--- a/Kebra Negast 1922.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 1922.scriv/QuickLook/Preview.html
@@ -112,6 +112,28 @@
 <hr class="afterText"/>
 
 <li>
+<p class="topLevelItemTitle">Contents</p>
+<p class="itemText">Introduction:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>I. The Manuscripts of the Kĕbra Nagast, etc.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>II. Translation of the Arabic Version</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>III. Legends of the Queen of Sheba in the Ḳur’ân</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>IV. Modern Legends of Solomon and the Queen of Sheba</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>V. Summary of the Contents of the Kĕbra Nagast</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The Chapters of the Kĕbra Nagast</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>1. The Glory of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>2. The Greatness of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>3. The Kingdom of Adam</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>4. Concerning Envy</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>5. The Kingdom of Seth</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>6. The Sin of Cain</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>7. Noah</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>8. The Flood</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>9. The Covenant of Noah</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>10. Concerning Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>11. Dec...</p>
+</li>
+<li>
 <p class="topLevelItemTitle">Introduction</p>
 </li>
 <hr class="afterTitle"/>
