--- a/Kebra Negast 1922.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 1922.scriv/QuickLook/Preview.html
@@ -114,11 +114,11 @@
 <li>
 <p class="topLevelItemTitle">Contents</p>
 <p class="itemText">Introduction:</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>I. The Manuscripts of the Kĕbra Nagast, etc.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>II. Translation of the Arabic Version</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>III. Legends of the Queen of Sheba in the Ḳur’ân</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>IV. Modern Legends of Solomon and the Queen of Sheba</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>V. Summary of the Contents of the Kĕbra Nagast</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>I. The Manuscripts of the Kĕbra Nagast, etc. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>II. Translation of the Arabic Version <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>III. Legends of the Queen of Sheba in the Ḳur’ân <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>IV. Modern Legends of Solomon and the Queen of Sheba <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>V. Summary of the Contents of the Kĕbra Nagast <span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The Chapters of the Kĕbra Nagast</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>1. The Glory of Kings</span></p></p>
@@ -130,8 +130,7 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>7. Noah</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>8. The Flood</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>9. The Covenant of Noah</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>10. Concerning Zion</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>11. Dec...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>10. Concerning Zio...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Introduction</p>
