Updating Appendix with Old Testatment passages

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>ModernKebraNegast</title>
+<title>Kebra Negast 202x</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!-- NOTE: margin property = top-right-bottom-left -->
@@ -648,7 +648,7 @@
 <ul>
 <li>
 <p class="itemTitle">A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast</p>
-<p class="itemText">Genesis i, 1, 170, Concerning the Beginning; i, 26, 1; ii, 17, Concerning the Angels who rebelled; iii, 16, 48; v, 9, 9; vi, 2–4, Concerning the Angels who rebelled; vi, 14, Concerning the Angels who rebelled; viii, 21, 7; ix, 4, 6; ix, 25–27, 6; x, 6, 8; xii ff., 11, 144; xiii, 14–17, 11; xiv, —, 200; xv, 1, 10; xviii, 1, More concerning the Ark and the Talk of the Wicked; xxii, 13, 113, More concerning the Ark and the Talk of the Wicked; xxii, 17, 30; xxx, 37, More concerning the Ark and the T...</p>
+<p class="itemText">Genesis i, 1, [^fn116], [^fn152]; i, 26, [^fn30]; ii, 17, [^fn146]; iii, 16, [^fn63]; v, 9, [^fn39]; vi, 2–4, [^fn149]; vi, 14, [^fn150]; viii, 21, [^fn36]; ix, 4, [^fn36]; ix, 25–27, [^fn35]; x, 6, [^fn38]; xii ff., 11, [^fn109]; xiii, 14–17, [^fn41]; xiv, —, [^fn181]; xv, 1, [^fn40]; xviii, 1, [^fn173]; xxii, 13, [^fn97], [^fn174]; xxii, 17, [^fn53]; xxx, 37, [^fn175]; xxxv, 22, [^fn42]; xlvii, 29, [^fn304]; xlvii, 31, [^fn176]; xlix, 4, [^fn42]; xlix, 8–12, [^fn246], [^fn247], [^fn248]; l, 25...</p>
 </li>
 <li>
 <p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
