--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -99,6 +99,20 @@
 <ul>
 <li>
 <p class="itemTitle">Preface to the 202x edition</p>
+<p class="itemText">Why a new version?</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A number of freely available copies of this manuscript exist online (and served as this editor’s initial exposure), as well as a series of editions in print form, so it’s reasonable to ask why a new edition is needed.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Why a new version based off Budge’s known faulty translation?</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Why a version from a white American who has no known connections to Ethiopia?</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
