Added Table of Contents

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -116,6 +116,15 @@
 <hr class="afterText"/>
 
 <li>
+<p class="topLevelItemTitle">Contents</p>
+<p class="itemText">Contents</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Introduction:</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">I. [The Manuscripts of the Kĕbra Nagast, etc.](#i-the-manuscripts-of-the-kebra-nagast-and-their-arrival-in-europe-the-labours-of-bruce-dillmann-praetorius-wright-zotenberg-and-bezold-king-johns-letter-to-lord-granville-date-of-compilation-of-the-kebra-nagast-the-ethiopian-work-based-on-coptic-and-arabic-sources-etc) <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">II. [Translation of the Arabic Version](#ii-english-translation-of-the-arabic-text-describing-how-the-kingdom-of-david-was-transferred-from-jerusalem-to-et...</p>
+</li>
+<li>
 <p class="topLevelItemTitle">Introduction</p>
 </li>
 <hr class="afterTitle"/>
