Updated language of Plate and Ch. 1

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -157,7 +157,7 @@
 <li>
 <p class="topLevelItemTitle">Plate</p>
 <p class="itemText">The Glory of Kings</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Paraclete, Who goeth forth from the Father, and deriveth from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
+<p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Counselor, Who goes forth from the Father, and derives from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Chapters</p>
@@ -166,7 +166,7 @@
 <ul>
 <li>
 <p class="itemTitle">Concerning the Glory of Kings</p>
-<p class="itemText">The interpretation and explanation of the Three Hundred and Eighteen Orthodox [Fathers] concerning splendour, and greatness, and dignity, and how God gave them to the children of Adam, and especially concerning the greatness and splendour of Zion, the Tabernacle (tâbôt) of the Law of God, of which He Himself is the Maker and Fashioner, in the fortress of His holiness before all created things, [both] angels and men. For the Father, and the Son, and the Holy Spirit with good fellowship and right ...</p>
+<p class="itemText">The interpretation and explanation of the 318 Orthodox Fathers concerning splendor, and greatness, and dignity, and how God gave them to the children of Adam, and especially concerning the greatness and splendor of Zion, the Tabernacle (tâbôt) of the Law of God, of which He Himself is the Maker and Fashioner, in the fortress of His holiness before all created things, both angels and men. For the Father, and the Son, and the Holy Spirit with good fellowship and right goodwill and cordial agreemen...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Greatness of Kings</p>
