Ch. 2 language update

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -170,8 +170,8 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the Greatness of Kings</p>
-<p class="itemText">Come then, let us go back, and let us consider, and let us begin [to state] which of the kings of the earth, from the first even unto the last, in respect of the Law and the Ordinances and honour and greatness, we should magnify or decry.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Gregory, the worker of wonders and miracles, who was cast into a cave because of [his] love for the martyrdom of Christ and suffered tribulation for fifteen years, said, “When I was in the pit I pondered over this matter, and over the folly of the Kings of Arme...</p>
+<p class="itemText">Come then, let us go back, and let us consider, and let us begin [to state] which of the kings of the earth, from the first even to the last, in respect of the Law and the Ordinances and honor and greatness, we should magnify or decry.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Gregory, the worker of wonders and miracles, who was cast into a cave because of [his] love for the martyrdom of Christ and suffered tribulation for fifteen years, said, “When I was in the pit I pondered over this matter, and over the folly of the Kings of Armenia...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Kingdom of Adam</p>
