--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -175,7 +175,7 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the Kingdom of Adam</p>
-<p class="itemText">And I go up from Adam and I say, God is King in truth, for Him praise is meet, and He appointed under Him Adam to be king over all that He had created. And He drove him out of the Garden, because of his apostasy through the sin of the Serpent and the plotting of the Devil. And at that sorrowful moment Cain was born, and when Adam saw that the face of Cain was ill-tempered (or, sullen) and his appearance evil he was sad. And then Abel was born, and when Adam saw that his appearance was good and h...</p>
+<p class="itemText">And I go up from Adam and I say, God is King in truth, for Him praise is proper, and He appointed under Him Adam to be king over all that He had created. And He drove him out of the Garden, because of his faithlessness through the sin of the Serpent and the plotting of the Devil. And at that sorrowful moment Cain was born, and when Adam saw that the face of Cain was ill-tempered (or, sullen) and his appearance evil he was sad. And then Abel was born, and when Adam saw that his appearance was goo...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning Envy</p>
