--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -179,7 +179,7 @@
 </li>
 <li>
 <p class="itemTitle">Concerning Envy</p>
-<p class="itemText">And when they had grown up together, Satan had envy of him, and he cast this envy into the heart of Cain, who was envious [of Abel] first, because of the words of his father Adam, who said, “He who hath the good-tempered face shall be the heir of my kingdom”; and secondly, because of his sister with the beautiful face, who was born with him and who had been given unto Abel, even as God commanded them to multiply and fill the earth—now the face of the sister who had been born with Abel resembled ...</p>
+<p class="itemText">And when they had grown up together, Satan envied him, and he cast this envy into the heart of Cain, who was envious of Abel first, because of the words of his father Adam, who said, “He who has the good-tempered face shall be the heir of my kingdom”; and secondly, because of his sister with the beautiful face, who was born with him and who had been given to Abel, even as God commanded them to multiply and fill the earth—now the face of the sister who had been born with Abel resembled that of Ca...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Kingdom of Seth</p>
